--- a/fe-app/public/index.html
+++ b/fe-app/public/index.html
@@ -19,12 +19,12 @@
             integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
             crossorigin="anonymous"
         />
-        <link
+        <!-- <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
-        />
+        /> -->
 
         <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
         <!--
@@ -52,10 +52,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
         <!-- <script src="../package/swiper-bundle.min.js"></script> -->
-        <script
+        <!-- <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
-        ></script>
+        ></script> -->
     </body>
 </html>
